# CollegeProjects

./: DataStructuresAndAlgorithmsREADME.md  README.md  exam-2026-Ale-contscoala.rar
Art museum/: Art museum.sln  UpgradeLog.htm
Art museum/Art museum/: SQLQuery4.sql
ArtPortofolioCatalog/: Artwork.cpp  Artwork.h  CMakeLists.txt  CSVRepository.cpp  CSVRepository.h  Command.cpp  Command.h  Controller.cpp  Controller.h  JSONRepository.cpp  JSONRepository.h  MainWindow.cpp  MainWindow.h  Repository.h  Tests.cpp  main.cpp
DataStructersAndAlgorithms A3/: assigment 3.sln
DataStructersAndAlgorithms A3/assigment 3/: ExtendedTest.cpp  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h  assigment 3.vcxproj  assigment 3.vcxproj.filters
DataStructersAndAlgorithms A3/assigment 3/x64/Debug/: assigment 3.exe.recipe
DataStructersAndAlgorithms A3/assigment 3/x64/Debug/assigment 3.tlog/: Cl.items.tlog  assigment 3.lastbuildstate  link.secondary.1.tlog
DataStructersAndAlgorithms A4/: assigment 4 sd.sln
DataStructersAndAlgorithms A4/assigment 4 sd/: ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h  assigment 4 sd.vcxproj
DataStructersAndAlgorithms A4/assigment 4 sd/x64/Debug/: assigment 4 sd.exe.recipe
DataStructersAndAlgorithms A4/assigment 4 sd/x64/Debug/assigment 4 sd.tlog/: Cl.items.tlog  assigment 4 sd.lastbuildstate  link.secondary.1.tlog
DataStructersAndAlgorithms A5/: assigment 5 ds.sln
DataStructersAndAlgorithms A5/assigment 5 ds/: ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h  assigment 5 ds.vcxproj
DataStructersAndAlgorithms A5/assigment 5 ds/x64/Debug/: assigment 5 ds.exe.recipe
DataStructersAndAlgorithms A5/assigment 5 ds/x64/Debug/assigment 5 ds.tlog/: Cl.items.tlog  assigment 5 ds.lastbuildstate  link.secondary.1.tlog
